--- a/miniapp/app.json
+++ b/miniapp/app.json
@@ -1,8 +1,15 @@
 {
   "pages": [
+    "pages/my-goods/my-goods",
     "pages/index/index",
     "pages/goods-info/goods-info",
-    "pages/publish/publish"
+    "pages/publish/publish",
+    "pages/me/me",
+    "pages/message/message",
+    "pages/user-set/user-set",
+    "pages/chat/chat",
+    "pages/search/search",
+    "pages/classify/classify"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -21,7 +28,7 @@
         "text": "发布"
       },
       {
-        "pagePath": "pages/logs/logs",
+        "pagePath": "pages/me/me",
         "text": "我"
       }
     ]
