--- a/miniapp/app.json
+++ b/miniapp/app.json
@@ -15,7 +15,8 @@
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "EE",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "black",
+    "backgroundColor":"#D9D9D9"
   },
   "tabBar": {
     "color":"#8a8a8a",
